#6351: Pique: Fix wide/full width columns on mobile

--- a/pique/assets/css/blocks.css
+++ b/pique/assets/css/blocks.css
@@ -115,16 +115,8 @@ body.archive .wp-block-archives.alignfull {
 /* When sidebar is below the content */
 
 @media (max-width: 999px) {
-	body.pique-sidebar.pique-singular .alignwide {
-		margin-left: -15%;
-		margin-right: -15%;
-		width: auto;
-		max-width: 1400px;
-	}
-
+	body.pique-sidebar.pique-singular .alignwide,
 	body.pique-sidebar.pique-singular .alignfull {
-		margin-left: calc(50% - 50vw);
-		margin-right: calc(50% - 50vw);
 		width: auto;
 		max-width: 1400px;
 	}
